app/assets/stylesheets/custom/navigation.css
@layer components {
  .sidebar-link {
    @apply rounded-lg px-3 py-2 focus:text-indigo-600 text-soft hover:text-normal text-sm font-medium hover:bg-slate-200/40 dark:hover:bg-slate-700/40 transition duration-200 ease-in-out dark:focus:text-white flex items-center gap-2.5 border border-transparent;

    &.sidebar-link-active {
      @apply text-normal bg-slate-200/75 dark:bg-slate-700/75 hover:bg-slate-200 dark:hover:bg-slate-700/75 border-slate-300/50 dark:border-slate-600/50;
    }
  }

  .tab-link {
    @apply flex flex-col items-center gap-1 p-1 font-bold text-xs text-soft hover:text-light transition duration-200 ease-in-out dark:focus:text-white;

    span {
      @apply sr-only;
    }

    &.tab-link-active {
      @apply text-indigo-600 dark:text-indigo-500 hover:text-indigo-500 dark:hover:text-indigo-600;

      &::after {
        @apply content-[''] block w-10 h-[2.5px] bg-current rounded-full mt-0.5 -mb-1;
      }
    }
  }

  .btn-tab {
    @apply rounded-md py-1.5 px-5.5 flex items-center gap-2 text-sm text-normal hover:text-muted dark:hover:text-soft z-10;

    &.btn-tab-icon-only {
      @apply p-2;
    }

    &.btn-tab-active {
      @apply text-indigo-500 hover:text-indigo-500 dark:text-normal dark:hover:text-normal;
    }
  }

  .tab-container {
    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm hide-scrollbar;
  }

  .tab-container-scroll-left {
    @apply bg-gradient-to-r from-slate-200 dark:from-slate-800 via-slate-200/90 dark:via-slate-800/90 to-transparent px-4 h-full rounded-l-lg absolute top-1/2 left-0 transform -translate-y-1/2 z-40;
  }

  .tab-container-scroll-right {
    @apply bg-gradient-to-l from-slate-200 dark:from-slate-800 via-slate-200/90 dark:via-slate-800/90 to-transparent px-4 h-full rounded-r-lg absolute top-1/2 right-0 transform -translate-y-1/2 z-40;
  }

  .sliding-tab-indicator {
    @apply absolute top-1/2 -translate-y-1/2 bg-white dark:bg-slate-700 rounded-md transition-all duration-[350ms] w-0 h-[calc(100%-0.25rem)];
  }
}

